# Dominion

./: .gitignore  LICENSE_EXCEPTIONS.md  README.md  RELEASE-NOTES.md  zip-RBDOOM-3-BFG-release.sh
base/: default.cfg  devtools.cfg  zip-coredata.bat  zip-lightdata.bat
base/_tb/fgd/: DOOM-3-models.fgd
base/def/: _tb_models.def  map_enpro.def
base/maps/game/: comm1_extra_ents.map
base/materials/: invisible.mtr
base/script/: doom_events.script  doom_events_class_diagram.mmd
dominion/: autoexec.cfg
doomclassic/doom/: i_sound_openal.cpp
neo/: CMakeLists.txt  cmake-linux-debug.sh  cmake-linux-release.sh  cmake-macos-release.sh  cmake-macos-retail.sh  cmake-vs2022-win64-optick-profiling.bat  cmake-xcode-debug.sh  cmake-xcode-release.sh  cmake-xcode-universal.sh
neo/d3xp/: GameEdit.cpp  Game_local.cpp  Misc.cpp  PlayerView.cpp  Pvs.cpp
neo/d3xp/ai/: AAS_debug.cpp
neo/d3xp/anim/: Anim.h  Anim_Blend.cpp
neo/d3xp/gamesys/: Class.cpp  SysCmds.cpp  SysCvar.cpp
neo/d3xp/menus/: MenuHandler_Shell.cpp  MenuScreen.h  MenuScreen_Shell_Root.cpp  MenuScreen_Shell_Settings.cpp  MenuScreen_Shell_Stereoscopics.cpp  MenuScreen_Shell_SystemOptions.cpp
neo/d3xp/script/: Script_Compiler.cpp  Script_Interpreter.cpp
neo/framework/: CmdSystem.cpp  Common.cpp  Common.h  Common_dialog.cpp  Common_local.h  Common_mapconvert.cpp  Console.cpp  DeclManager.cpp  DeclManager.h  File.cpp  FileSystem.cpp  FileSystem.h  Licensee.h  common_frame.cpp
neo/idlib/: Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  MapFile_gltf.cpp  ParallelJobList.cpp  ParallelJobList.h  Parser.cpp  precompiled.h
neo/idlib/geometry/: RenderMatrix.cpp  RenderMatrix.h
neo/idlib/math/: Ode.cpp
neo/imgui/: BFGimguiImpl.cpp  ImGui_Hooks.h
neo/libs/imtui/pdcurses/pdcurses/: initscr.c
neo/libs/ispc_texcomp/: CMakeLists.txt  kernel.ispc  readme.md
neo/libs/moc/: CompilerSpecific.inl  MaskedOcclusionCulling.cpp
neo/libs/zlib/: zutil.h
neo/renderer/: BinaryImage.cpp  BinaryImageData.h  BindingCache.cpp  Cinematic.cpp  Framebuffer.h  GLMatrix.cpp  GuiModel.cpp  Image.h  ImageManager.cpp  Image_files.cpp  Image_intrinsic.cpp  Image_load.cpp  Image_process.cpp  ImmediateMode.cpp  Interaction.cpp  Material.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Model_gltf.cpp  Model_gltf.h  Model_local.h  Model_md3.h  Model_md5.cpp  RenderBackend.cpp  RenderBackend.h  RenderCommon.h  RenderEntity.cpp  RenderLog.cpp  RenderProgs.cpp  RenderProgs.h  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.h  RenderWorld_defs.cpp  RenderWorld_envprobes.cpp  RenderWorld_lightgrid.cpp  (+7 more)
neo/renderer/DXT/: DXTCodec.h  DXTEncoder.cpp
neo/renderer/NVRHI/: Framebuffer_NVRHI.cpp  Image_NVRHI.cpp  RenderBackend_NVRHI.cpp  RenderDebug_NVRHI.cpp  RenderProgs_NVRHI.cpp
neo/renderer/Passes/: MipMapGenPass.cpp  MipMapGenPass.h  MipMapGenPass_cb.h  SsaoPass.cpp  SsaoPass_cb.h  TemporalAntiAliasingPass.cpp  TemporalAntiAliasingPass.h  TemporalAntiAliasingPass_cb.h  TonemapPass.cpp  TonemapPass.h  TonemapPass_cb.h
neo/shaders/: BRDF.inc.hlsl  global_inc.hlsl  heatHazeWithMask.vs.hlsl  heatHazeWithMaskAndVertex.vs.hlsl  heathaze.vs.hlsl  shaders.cfg  vulkan.hlsli
neo/shaders/builtin/: gbuffer.vs.hlsl  mipmapgen.cs.hlsl
neo/shaders/builtin/SSAO/: AmbientOcclusion_AO.ps.hlsl  ssao_blur.cs.hlsl  ssao_compute.cs.hlsl  ssao_deinterleave.cs.hlsl
neo/shaders/builtin/legacy/: bumpyenvironment2.ps.hlsl  bumpyenvironment2.vs.hlsl  skybox.vs.hlsl
neo/shaders/builtin/lighting/: ambient_lightgrid_IBL.ps.hlsl  ambient_lighting_IBL.ps.hlsl  interaction.ps.hlsl  interactionSM.ps.hlsl
neo/shaders/builtin/post/: SMAA.inc.hlsl  SMAA_blending_weight_calc.ps.hlsl  SMAA_blending_weight_calc.vs.hlsl  SMAA_edge_detection.ps.hlsl  SMAA_edge_detection.vs.hlsl  SMAA_final.ps.hlsl  SMAA_final.vs.hlsl  crt_newpixie.ps.hlsl  retro_c64.ps.hlsl  retro_cpc.ps.hlsl  retro_genesis.ps.hlsl  retro_ps1.ps.hlsl  screen.vs.hlsl  taa.cs.hlsl
neo/sound/: snd_system.cpp  snd_world.cpp
neo/sound/OpenAL/: AL_CinematicAudio.cpp  AL_SoundSample.cpp  AL_SoundVoice.cpp
neo/sound/XAudio2/: XA2_CinematicAudio.cpp
neo/swf/: SWF_ScriptObject.cpp
neo/sys/: DeviceManager.cpp  DeviceManager.h  DeviceManager_DX12.cpp  DeviceManager_VK.cpp
neo/sys/posix/: platform_osx.cpp
neo/sys/sdl/: sdl_cpu.cpp  sdl_events.cpp  sdl_vkimp.cpp
neo/sys/win32/: win_glimp.cpp  win_main.cpp  win_wndproc.cpp
neo/tools/: edit_public.h
neo/tools/compilers/: CMakeLists.txt  main.cpp  main_posix.cpp
neo/tools/compilers/dmap/: dmap.cpp  dmap.h  facebsp.cpp  glfile.cpp  map.cpp  output.cpp  portals.cpp  renderlight.cpp  tritjunction.cpp  tritools.cpp  ubrush.cpp  usurface.cpp
neo/tools/imgui/: ImGuiTools.cpp
neo/tools/imgui/afeditor/: AfEditor.cpp
neo/tools/imgui/lighteditor/: LightEditor.cpp
